--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=3000
 MONGO_URI=mongodb+srv://karthik1:simpletodo@cluster0.jxqbm2p.mongodb.net/?retryWrites=true&w=majority
-JWT_SECRET: "ka2310"
+JWT_SECRET=ka2310
